--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>liquid_tax</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="liquid_tax - Brazilian pixel artist and indie game enthusiast. explore my art, projects, and more.">
+
 </head>
 <body>
+    <div class="container">
     <div class="cont-intro">
         <h1>@liquid_tax</h1>
         <p>liquid_tax, a.k.a Farewell Lunna, is a brazilian pixel artist who began creating drawings out of a passion for indie games such as Celeste, Stardew Valley, Super Mombo Quest, and old SNES games.</p>
@@ -47,7 +50,7 @@
             <img src="images/liquidtaxart_8.png">
             <br>
         </div>
-        <a>and much more!!!11!!!!1</a>
+        <p>and much more!!!11!!!!1</p>
     </div>
 
     <div class="cont-cat">
@@ -62,15 +65,15 @@
 
     <div class="cont-projects">
         <h2>my projects</h2>
-        <p>here are some projects that i participated and/or made myself<p>
+        <p>here are some projects that i participated and/or made myself</p>
             <div class="projects-pinble">
                 <h3>Pinble (game art display)</h3>
                 <p>Pinble is a casual game where you need to score as many points as possible before losing your balls (sus)<br>
                 In this game you will come across several stages with different mechanics and themes, as well as similar minigames that are played during the stages.</p>
                 <br>
                 <p>i was "hired" to make the pinble machine in pixel art, this is the machine :3</p>
-                <img src="images/projdisplay_pinble.png">
-                <a href="https://controlev.itch.io/pinble" target="_blank">play Pinble</a>
+                <img src="images/projdisplay_pinble.png"><br>
+                <a href="https://controlev.itch.io/pinble" target="_blank"> &gt; play Pinble &lt; </a>
             </div>
 
             <div class="projects-aliensplease">
@@ -78,8 +81,8 @@
                 <p>You have been hired to control the entry of aliens into Area 51, however, you will have to be aware of possible costumed invaders in this game inspired by Papers, Please</p>
                 <br>
                 <p>i participated with my friend to do this game on a game jam, she carried everything about coding, and i just made the game assts</p>
-                <img src="images/projdisplay_aliens.jpg">
-                <a href="https://cachorro-voador.itch.io/aliens-please" target="_blank">play Aliens, Please!</a>
+                <img src="images/projdisplay_aliens.jpg"><br>
+                <a href="https://cachorro-voador.itch.io/aliens-please" target="_blank"> &gt; play Aliens, Please! &lt; </a>
             </div>
 
             <div class="projects-moontalk">
@@ -87,8 +90,8 @@
                 <p>MoonTalk is a website where you share stories and rumors about Moonlight Camp<br><br>
                 to give some context, this site is part of an RPG that i'm participating in with some friends, i decided to create the entire website from scratch because i hadn't programmed in a while, and im happy with the result :)<br>
                 notice that the entire website is in brazilian portuguese, in case you don't understand anything that is written on it lmao</p>
-                <img src="images/projdisplay_moontalk.png">
-                <a href=" https://luccatarifa.github.io/moontalk-rumors/" target="_blank">meet MoonTalk</a>
+                <img src="images/projdisplay_moontalk.png"><br>
+                <a href=" https://luccatarifa.github.io/moontalk-rumors/" target="_blank"> &gt; meet MoonTalk &lt; </a>
             </div>
 
             <div class="projects-purrgy">
@@ -96,9 +99,9 @@
                 <p>Purrgatory is a visual novel about passing time in an afterlife where nothing really matters. Explore a whimsical point-and-click world, get to know its downtrodden inhabitants, and remember — furever's not so bad!</p>
                 <p>purrgatory was the first game i played when i created my steam account, so this game has an emotional value for me<br>
                 one day (in like 2023) the dev (niv) was looking for volunteer translators to translate his game, i've never translated a game before, but i saw an opportunity at that time and it worked! the game is on fully ptbr now, and i intend to translate other games later on, who knows?</p>
-                <img src="images/projdisplay_purrgy.jpg">
-                <a href="https://nivrad00.itch.io/purrgatory" target="_blank">play purrgatory (via itch.io)</a>
-                <a href="https://store.steampowered.com/app/1713610/Purrgatory/" target="_blank">download purrgatory (via steam)</a>
+                <img src="images/projdisplay_purrgy.jpg"><br>
+                <a href="https://nivrad00.itch.io/purrgatory" target="_blank"> &gt; play purrgatory (via itch.io) &lt; </a><br>>
+                <a href="https://store.steampowered.com/app/1713610/Purrgatory/" target="_blank"> &gt; download purrgatory (via steam) &lt; </a>
             </div>
     </div>
 
@@ -110,5 +113,7 @@
         <a href="https://www.pixilart.com/liquidtax" target="_blank">pixilart</a>
         <a href="https://github.com/luccatarifa" target="_blank">github</a>
         </div>
+
+    </div>
 </body>
 </html>
