--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>liquid_tax</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="description" content="liquid_tax - Brazilian pixel artist and indie game enthusiast. explore my art, projects, and more.">
+    <meta name="description" content="my own portfolio, check it out">
 
 </head>
 <body>
@@ -13,7 +13,6 @@
     <div class="cont-intro">
         <h1>@liquid_tax</h1>
         <p>liquid_tax, a.k.a Farewell Lunna, is a brazilian pixel artist who began creating drawings out of a passion for indie games such as Celeste, Stardew Valley, Super Mombo Quest, and old SNES games.</p>
-        <h4>reminder! this website is not complete :C</h4>
     </div>
 
     <div class="cont-aboutme">
