--- a/index.html
+++ b/index.html
@@ -99,20 +99,22 @@
                 <p>purrgatory was the first game i played when i created my steam account, so this game has an emotional value for me<br>
                 one day (in like 2023) the dev (niv) was looking for volunteer translators to translate his game, i've never translated a game before, but i saw an opportunity at that time and it worked! the game is on fully ptbr now, and i intend to translate other games later on, who knows?</p>
                 <img src="images/projdisplay_purrgy.jpg"><br>
-                <a href="https://nivrad00.itch.io/purrgatory" target="_blank"> &gt; play purrgatory (via itch.io) &lt; </a><br>>
-                <a href="https://store.steampowered.com/app/1713610/Purrgatory/" target="_blank"> &gt; download purrgatory (via steam) &lt; </a>
+                <a href="https://nivrad00.itch.io/purrgatory" target="_blank"> &gt; play purrgatory (via itch.io) &lt; </a><br>
+                <a href="https://store.steampowered.com/app/1713610/Purrgatory/" target="_blank">&gt; download purrgatory (via steam) &lt; </a>
             </div>
     </div>
 
     <div class="cont-social">
         <h2>my social media</h2>
-        <a href="https://bsky.app/profile/liquidtax.bsky.social" target="_blank">bluesky</a>
-        <a href="https://t.me/liquid_tax" target="_blank">contact (via telegram)</a>
-        <a href="https://www.reddit.com/user/liquidtax/" target="_blank">reddit</a>
-        <a href="https://www.pixilart.com/liquidtax" target="_blank">pixilart</a>
-        <a href="https://github.com/luccatarifa" target="_blank">github</a>
+        <a href="https://bsky.app/profile/liquidtax.bsky.social" target="_blank"><button>bluesky</button></a><br>
+        <a href="https://t.me/liquid_tax" target="_blank"><button>contact (via telegram)</button></a><br>
+        <a href="https://www.reddit.com/user/liquidtax/" target="_blank"><button>reddit</button></a><br>
+        <a href="https://www.pixilart.com/liquidtax" target="_blank"><button>pixilart</button></a><br>
+        <a href="https://github.com/luccatarifa" target="_blank"><button>github</button></a><br>
+        <p>these buttons will be stylized later, dw</p>
         </div>
-
     </div>
+
+    <div class="blank">.</div>
 </body>
 </html>
