--- a/main/index.html
+++ b/main/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>liquid_tax's portfolio</title>
+    <title>Lunna's portfolio</title>
     <link rel="stylesheet" href="/main/style.css">
     <meta name="description" content="my own portfolio, check it out">
 
@@ -13,16 +13,20 @@
     <div class="cont-intro">
         <h1>@liquid_tax</h1>
         <p>liquid_tax, a.k.a Farewell Lunna, is a brazilian pixel artist who began creating drawings out of a passion for indie games such as Celeste, Stardew Valley, Super Mombo Quest, and old SNES games.</p>
+        <h3>reminder: this website is still in development</h3>
     </div>
 
     <div class="cont-aboutme">
         <h2>about me</h2>
+        <h6>this is me  ⬇</h6>
+        <img src="/images/liquid.jpg">
         <p>- from brazil</p>
         <p>- 17y old</p>
         <p>- gender fluid</p>
         <p>- any pronouns</p>
         <p>- likes breakcore, vocaloid, nintendo, frutiger aero and other nerd stuff</p>
         <p>- silly :3</p>
+        <a href="/stuffilike/index.html"><button>see more things i like</button></a>
     </div>
 
     <div class="cont-howitstarted">
@@ -32,7 +36,7 @@
 
     <div class="cont-code">
         <h2>do i do something else besides drawing?</h2>
-        <p>i know some HTML and CSS, so i code some little silly stuff here and there, but i intend to be a programmer or game dev one day!</p>
+        <p>i know some web developing (HTML and CSS) so i code some little silly stuff here and there, but i intend to be a programmer or game dev one day!</p>
     </div>
 
     <div class="cont-arts">
@@ -93,6 +97,7 @@
         <a href="https://www.reddit.com/user/liquidtax/" target="_blank"><button>reddit</button></a><br>
         <a href="https://www.pixilart.com/liquidtax" target="_blank"><button>pixilart</button></a><br>
         <a href="https://github.com/luccatarifa" target="_blank"><button>github</button></a><br>
+        <p>discord: @liquid_tax</p>
         <p>these buttons will be stylized later, dw</p>
         </div>
     </div>
