--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 
     <div class="cont-social">
         <h2>my social media</h2>
-        <a href="https://bsky.app/profile/liquidtax.bsky.social" target="_blank"><button>bluesky</button></a><br>
-        <a href="https://t.me/liquid_tax" target="_blank"><button>contact (via telegram)</button></a><br>
-        <a href="https://www.reddit.com/user/liquidtax/" target="_blank"><button>reddit</button></a><br>
-        <a href="https://www.pixilart.com/liquidtax" target="_blank"><button>pixilart</button></a><br>
-        <a href="https://github.com/luccatarifa" target="_blank"><button>github</button></a><br>
+        <div class="btn-bsk"><a href="https://bsky.app/profile/liquidtax.bsky.social" target="_blank"><button>bluesky</button></a></div><br>
+        <div class="btn-tg"><a href="https://t.me/liquid_tax" target="_blank"><button>contact (via telegram)</button></a></div><br>
+        <div class="btn-rd"><a href="https://www.reddit.com/user/liquidtax/" target="_blank"><button>reddit</button></a></div><br>
+        <div class="btn-px"><a href="https://www.pixilart.com/liquidtax" target="_blank"><button>pixilart</button></a></div><br>
+        <div class="btn-gh"><a href="https://github.com/luccatarifa" target="_blank"><button>github</button></a></div><br>
         <p>discord: @liquid_tax</p>
         <p>these buttons will be stylized later, dw</p>
         </div>
