updated a lot of stuff
- age
- stuff i like section
- intro
- added twitter button on "my social" section
- readme file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lunna's portfolio</title>
+    <title>Ashley's portfolio</title>
     <link rel="stylesheet" href="style.css">
     <meta name="description" content="my own portfolio, check it out">
 
@@ -12,7 +12,7 @@
     <div class="container">
     <div class="cont-intro">
         <h1>@liquid_tax</h1>
-        <p>liquid_tax, a.k.a Farewell Lunna, is a brazilian pixel artist who began creating drawings out of a passion for indie games such as Celeste, Stardew Valley, Super Mombo Quest, and old SNES games.</p>
+        <p>liquid_tax, a.k.a Ashley, Lunna, Farewell Lunna or ash64, is a brazilian pixel artist who began creating drawings out of a passion for indie games such as Celeste, Stardew Valley, Super Mombo Quest, and old SNES games.</p>
         <h3>reminder: this website is still in development!</h3>
     </div>
 
@@ -21,7 +21,7 @@
         <h6>this is me  ⬇</h6>
         <img src="images/liquid.webp">
         <p>- from brazil</p>
-        <p>- 17y old</p>
+        <p>- 18y old</p>
         <p>- gender fluid</p>
         <p>- any pronouns</p>
         <p>- likes breakcore, vocaloid, nintendo, frutiger aero and other nerd stuff</p>
@@ -93,12 +93,12 @@
     <div class="cont-social">
         <h2>my social media</h2>
         <div class="btn-bsk"><a href="https://bsky.app/profile/liquidtax.bsky.social" target="_blank"><button>bluesky</button></a></div><br>
+        <div class="btn-twt"><a href="https://x.com/liquid_tax" target="_blank"><button>twitter / x</button></a></div><br>
         <div class="btn-tg"><a href="https://t.me/liquid_tax" target="_blank"><button>contact (via telegram)</button></a></div><br>
         <div class="btn-rd"><a href="https://www.reddit.com/user/liquidtax/" target="_blank"><button>reddit</button></a></div><br>
         <div class="btn-px"><a href="https://www.pixilart.com/liquidtax" target="_blank"><button>pixilart</button></a></div><br>
         <div class="btn-gh"><a href="https://github.com/luccatarifa" target="_blank"><button>github</button></a></div><br>
-        <p>discord: @liquid_tax</p>
-        <p>these buttons will be stylized later, dw</p>
+        <p>main discord: @liquid_tax</p>
         </div>
     </div>
 
