--- a/stuffilike/index.html
+++ b/stuffilike/index.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>stuff Lunna likes</title>
+    <title>stuff Ashley likes</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="cont-stuffilike">
         <h2>stuff i like</h2>
         <a href="/index.html"><button>click here to go back!</button></a>
-        <p>in development, come back soon :3</p>
+
+        <p>not finished yet, come back soon :3</p>
+
+        
+    </div>
+
+    <div class="cont-stuffilike">
+        <h3>console collecting</h3>
+        <img src="/images/consolecollecting.webp">
+        <p>i dont know why, but suddenly i wanted to collect old consoles so bad, and i did! i now have 5 consoles (3 portables and 2 tv ones), but i plan to collect even more<br>
+        btw im just collecting the consoles, not the games, im pirating them all :3</p>
     </div>
 </body>
 </html>
