- fixed "github" redirect button

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="btn-tg"><a href="https://t.me/liquid_tax" target="_blank"><button>contact (via telegram)</button></a></div><br>
         <div class="btn-rd"><a href="https://www.reddit.com/user/liquidtax/" target="_blank"><button>reddit</button></a></div><br>
         <div class="btn-px"><a href="https://www.pixilart.com/liquidtax" target="_blank"><button>pixilart</button></a></div><br>
-        <div class="btn-gh"><a href="https://github.com/luccatarifa" target="_blank"><button>github</button></a></div><br>
+        <div class="btn-gh"><a href="https://github.com/ashleytarifa" target="_blank"><button>github</button></a></div><br>
         <p>main discord: @liquid_tax</p>
         </div>
     </div>
