--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
         <div class="btn-px"><a href="https://www.pixilart.com/liquidtax" target="_blank"><button>pixilart</button></a></div><br>
         <div class="btn-gh"><a href="https://github.com/ashleytarifa" target="_blank"><button>github</button></a></div><br>
         <p>main discord: @liquid_tax</p>
+        <p>alt discord: @ashleytarifa</p>
+        <p>feel free to say hi!</p>
         </div>
     </div>
 
