added favico + icons for buttons on "my social media"

--- a/projects/index.html
+++ b/projects/index.html
@@ -14,9 +14,10 @@
         <h3>MoonTalk (website)</h3>
         <p>MoonTalk is a website where you share stories and rumors about Moonlight Camp<br><br>
         to give some context, this site is part of an RPG that i'm participating in with some friends, i decided to create the entire website from scratch because i hadn't programmed in a while, and im happy with the result :)<br>
-        notice that the entire website is in brazilian portuguese, in case you don't understand anything that is written on it lmao</p>
+        notice that the entire website is in brazilian portuguese, in case you don't understand anything that is written on it<br>
+        website is now discontinued because the rpg ended lol</p>
         <img src="/images/projdisplay_moontalk.webp"><br>
-        <a href=" https://luccatarifa.github.io/moontalk-rumors/" target="_blank"> &gt; meet MoonTalk &lt; </a>
+        <a href="https://github.com/ashleytarifa/moontalk-rumors" target="_blank"> &gt; meet MoonTalk &lt; </a>
     </div>
 
     <div class="projects-purrgy">
