--- a/index.html
+++ b/index.html
@@ -3,32 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashley's projects</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>Ashley's portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta name="description" content="my own portfolio, check it out">
+
 </head>
 <body>
-    <div class="cont-projects">
-        <h2>more projects i participated and/or made myself</h2>
-        <a href="../index.html"><button>click here to go back!</button></a>
-    <div class="projects-moontalk">
-        <h3>MoonTalk (website)</h3>
-        <p>MoonTalk is a website where you share stories and rumors about Moonlight Camp<br><br>
-        to give some context, this site is part of an RPG that i'm participating in with some friends, i decided to create the entire website from scratch because i hadn't programmed in a while, and im happy with the result :)<br>
-        notice that the entire website is in brazilian portuguese, in case you don't understand anything that is written on it<br>
-        website is now discontinued because the rpg ended lol</p>
-        <img src="/images/projdisplay_moontalk.webp"><br>
-        <a href="https://github.com/ashleytarifa/moontalk-rumors" target="_blank"> &gt; meet MoonTalk &lt; </a>
+    <div class="container">
+    <div class="cont-intro">
+        <h1>@liquid_tax</h1>
+        <p>liquid_tax, a.k.a Ashley, Lunna, Farewell Lunna or ash64, is a brazilian pixel artist who began creating drawings out of a passion for indie games such as Celeste, Stardew Valley, Super Mombo Quest, and old SNES games.</p>
+        <h3>reminder: this website is still in development!</h3>
     </div>
 
-    <div class="projects-purrgy">
-        <h3>purrgatory (portuguese brazilian translation)</h3>
-        <p>Purrgatory is a visual novel about passing time in an afterlife where nothing really matters. Explore a whimsical point-and-click world, get to know its downtrodden inhabitants, and remember — furever's not so bad!</p>
-        <p>purrgatory was the first game i played when i created my steam account, so this game has an emotional value for me<br>
-        one day (in like 2023) the dev (niv) was looking for volunteer translators to translate his game, i've never translated a game before, but i saw an opportunity at that time and it worked! the game is on fully ptbr now, and i intend to translate other games later on, who knows?</p>
-        <img src="/images/projdisplay_purrgy.webp"><br>
-        <a href="https://nivrad00.itch.io/purrgatory" target="_blank"> &gt; play purrgatory (via itch.io) &lt; </a><br>
-        <a href="https://store.steampowered.com/app/1713610/Purrgatory/" target="_blank">&gt; download purrgatory (via steam) &lt; </a>
+    <div class="cont-aboutme">
+        <h2>about me</h2>
+        <h6>this is me  ⬇</h6>
+        <img src="images/liquid.webp">
+        <p>- from brazil</p>
+        <p>- 18y old</p>
+        <p>- gender fluid</p>
+        <p>- any pronouns</p>
+        <p>- likes breakcore, vocaloid, nintendo, frutiger aero and other nerd stuff</p>
+        <p>- silly :3</p>
+        <a href="stuffilike/index.html"><button>see more things i like</button></a>
     </div>
+
+    <div class="cont-howitstarted">
+        <h2>how did i started drawing?</h2>
+        <p>i always wanted to be an artist, but i could never draw anything. after developing a passion for indie games and pixel art, i decided to give it a try and drew something very simple. however, i saw potential and ended up creating my first landscape. i liked it and have continued drawing ever since. even with the challenges of daily life (school and work), i still make some time to do what i love S2</p>
     </div>
+
+    <div class="cont-code">
+        <h2>do i do something else besides drawing?</h2>
+        <p>i know some web developing (HTML and CSS) so i code some little silly stuff here and there, but i intend to be a programmer or game dev one day!</p>
+    </div>
+
+    <div class="cont-arts">
+        <h2>my arts</h2>
+        <p>some of the arts i made:</p>
+        <div class="arts-grid"> 
+            <img src="images/liquidtaxart_1.webp">
+            <img src="images/liquidtaxart_2.webp">
+            <img src="images/liquidtaxart_3.webp">
+            <img src="images/liquidtaxart_4.webp">
+            <img src="images/liquidtaxart_5.webp">
+            <img src="images/liquidtaxart_6.webp">
+            <img src="images/liquidtaxart_7.webp">
+            <img src="images/liquidtaxart_8.webp">
+            <br>
+        </div>
+        <p>and much more!!!11!!!!1</p>
+    </div>
+
+    <div class="cont-cat">
+        <p>BOO! cat jumpscare</p>
+        <p>this is my cat, say hi to him :3</p>
+        <div class="cat-grid">
+        <img src="images/cat.webp">
+        <img src="images/cat2.webp">
+        <img src="images/cat3.webp">
+        </div>
+    </div>
+
+    <div class="cont-projects">
+        <h2>my projects</h2>
+        <p>here are some projects that i participated and/or made myself</p>
+            <div class="projects-pinble">
+                <h3>Pinble (game art display)</h3>
+                <p>Pinble is a casual game where you need to score as many points as possible before losing your balls (sus)<br>
+                In this game you will come across several stages with different mechanics and themes, as well as similar minigames that are played during the stages.</p>
+                <br>
+                <p>i was "hired" to make the pinble machine in pixel art, this is the machine :3</p>
+                <img src="images/projdisplay_pinble.webp"><br>
+                <a href="https://controlev.itch.io/pinble" target="_blank"> &gt; play Pinble &lt; </a>
+            </div>
+
+            <div class="projects-aliensplease">
+                <h3>Aliens, Please! (game assets)</h3>
+                <p>You have been hired to control the entry of aliens into Area 51, however, you will have to be aware of possible costumed invaders in this game inspired by Papers, Please</p>
+                <br>
+                <p>i participated with my friend to do this game on a game jam, she carried everything about coding, and i just made the game assts</p>
+                <img src="images/projdisplay_aliens.webp"><br>
+                <a href="https://cachorro-voador.itch.io/aliens-please" target="_blank"> &gt; play Aliens, Please! &lt; </a>
+            </div>
+        <a href="projects/index.html"><button>see more projects</button></a>
+    </div>
+
+    <div class="cont-social">
+        <h2>my social media</h2>
+        <div class="btn-bsk"><a href="https://bsky.app/profile/liquidtax.bsky.social" target="_blank">
+            <button span class="icon"></span>bluesky</button>
+        </a></div>
+        <br>
+        <div class="btn-twt"><a href="https://x.com/liquid_tax" target="_blank">
+            <button span class="icon"></span>twitter / x</button>
+        </a></div>
+        <br>
+        <div class="btn-tg"><a href="https://t.me/liquid_tax" target="_blank">
+            <button span class="icon"></span>telegram</button>
+        </a></div>
+        <br>
+        <div class="btn-rd"><a href="https://www.reddit.com/user/liquidtax/" target="_blank">
+            <button span class="icon"></span>reddit</button>
+        </a></div>
+        <br>
+        <div class="btn-px"><a href="https://www.pixilart.com/liquidtax" target="_blank">
+            <button span class="icon"></span>pixilart</button>
+        </a></div>
+        <br>
+        <div class="btn-gh"><a href="https://github.com/ashleytarifa" target="_blank">
+            <button span class="icon"></span>github</button>
+        </a></div>
+        <br>
+        <p>main discord: @liquid_tax</p>
+        <p>alt discord: @ashleytarifa</p>
+        <p>feel free to say hi!</p>
+        </div>
+    </div>
+
+    <div>
+    </div>
+    <div class="blank">.</div>
 </body>
 </html>
