--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <p>main discord: @liquid_tax</p>
         <p>alt discord: @ashleytarifa</p>
         <p>feel free to say hi!</p>
+        <a href="games/games.html"><button>add me on games :3</button></a>
         </div>
     </div>
 
