--- a/stuffilike/index.html
+++ b/stuffilike/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stuff Ashley likes</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="cont-stuffilike">
@@ -12,8 +13,6 @@
         <a href="/index.html"><button>click here to go back!</button></a>
 
         <p>not finished yet, come back soon :3</p>
-
-        
     </div>
 
     <div class="cont-stuffilike">
