Added "back to top" button + neocities boxes

--- a/index.html
+++ b/index.html
@@ -124,6 +124,32 @@
 
     <div>
     </div>
+
+    <div class="boxes">
+        <img src="https://anlucas.neocities.org/n64_com_now.gif" alt="n64 now";>
+        <img src="https://anlucas.neocities.org/made_with_windows.gif" alt="made with windows";>
+        <img src="https://anlucas.neocities.org/psbutton.gif" alt="ps button";>
+        <img src="https://anlucas.neocities.org/apple_fatal_error.gif" alt="windows better lol";>
+        <img src="https://anlucas.neocities.org/icon6.gif" alt="games";>
+        <img src="https://anlucas.neocities.org/get.gif" alt="get firefox">
+        <img src="https://cyber.dabamos.de/88x31/discord.gif" alt="discord">
+        <img src="https://cyber.dabamos.de/88x31/internetarchive.gif" alt="internet archive">
+        <img src="https://cyber.dabamos.de/88x31/nmasterbot.gif" alt="nintendo master">
+        <img src="https://cyber.dabamos.de/88x31/button25.gif" alt="lgbt">
+        <img src="https://cyber.dabamos.de/88x31/switch_now.gif" alt="switch">
+        <img src="https://cyber.dabamos.de/88x31/wii.gif" alt="wii">
+        <img src="https://cyber.dabamos.de/88x31/vocaloid.gif" alt="vocaloid">
+        <img src="https://cyber.dabamos.de/88x31/hatsunemiku1.gif" alt="hatsunemiku">
+        <img src="https://cyber.dabamos.de/88x31/github-check.gif" alt="github">
+        <img src="/images/TransRightsNow.png" alt="trans rights">
+        <img src="/images/vscbutton.gif" alt="vscode">
+        <img src="https://cyber.dabamos.de/88x31/cssdif.gif" alt="css">
+    </div>
+
+    <button id="backToTop" title="Go to top">Go to Top</button>
+
     <div class="blank">.</div>
+
+    <script src="script.js"></script>
 </body>
 </html>
