--- a/projects/index.html
+++ b/projects/index.html
@@ -31,5 +31,9 @@
         <a href="https://store.steampowered.com/app/1713610/Purrgatory/" target="_blank">&gt; download purrgatory (via steam) &lt; </a>
     </div>
     </div>
+
+    <button id="backToTop" title="Go to top">Go to Top</button>
+
+    <script src="../script.js"></script>
 </body>
 </html>
