--- a/stuffilike/index.html
+++ b/stuffilike/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="cont-stuffilike">
         <h2>stuff i like</h2>
-        <a href="/index.html"><button>click here to go back!</button></a>
+        <a href="../index.html"><button>click here to go back!</button></a>
 
         <p>not finished yet, come back soon :3</p>
     </div>
@@ -21,5 +21,9 @@
         <p>i dont know why, but suddenly i wanted to collect old consoles so bad, and i did! i now have 5 consoles (3 portables and 2 tv ones), but i plan to collect even more<br>
         btw im just collecting the consoles, not the games, im pirating them all :3</p>
     </div>
+
+    <button id="backToTop" title="Go to top">Go to Top</button>
+
+    <script src="../script.js"></script>
 </body>
 </html>
