--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         things are almost ready, so expect some updates soon!<br><br>
             
             really appreciate you dropping by! see ya~ (´｡• ω •｡`) ♡<br><br>
-            <img src="img/cat.png">
+            <img src="img/cat.png" width="200px">
             <p>this is ash's cat btw, say hi to him :3</p>
     </div>
     <div style="height: 10px;" opacity="0";>.</div>
