--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <img src="img/cat.png" width="200px">
             <p>this is ash's cat btw, say hi to him :3</p>
     </div>
-    <div style="height: 10px;" opacity="0";>.</div>
+    <div style="height: 10px" opacity="0">.</div>
     <footer>
         <p>@ 2025 - ash64, no rights reserved</p>
     </footer>
-    <div style="height: 50px;" opacity="0";>.</div>
+    <div style="height: 50px" opacity="0">.</div>
 </body>
 </html>
