--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="cont-intro">
         <h1>Portfolio under maintenance!</h1>
-        <p>hiii!! thanks for visiting my little corner of the internet :3  <br>
+        <p>hiii! thanks for visiting my little corner of the internet :3  <br>
         i’m working on a full makeover for this site — turning it from a bloggy mess into a real portfolio hehe <br>
         things are almost ready, so expect some updates soon!<br><br>
             
