--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             current status:
             <p>building a gaming PC</p>
         </div>
+        <div style="height: 30px; opacity: 0;">.</div>
     </div>
 
     <audio id="bg-music" src="bgm/bgm.mp3" autoplay loop></audio>
