changed projects and updated status

--- a/projects/index.html
+++ b/projects/index.html
@@ -116,18 +116,15 @@
         <div class="flip-inner">
           <!-- frente -->
           <div class="flip-front">
-            <img src="../images/pj/pj_piratestation.png" alt="project thumbnail" class="project-thumbnail" />
-            <h3>PirateStation</h3>
+            <img src="../images/pj/pj_3dsemu.png" alt="project thumbnail" class="project-thumbnail" />
+            <h3>3DS Emulator Compatibility List</h3>
           </div>
 
           <!-- verso -->
           <div class="flip-back">
-            <h3>PirateStation</h3>
-            <p>PirateStation is a cozy little digital space made with love<br><br>
-              Here you'll find a game hub with a special little server, a pirate kitty mascot, as well as grab free
-              games from various consoles and have support for emulation and stuff<br>
-              all fan-made, with a sprinkle of cute rebellion</p>
-            <a class="project-link" href="https://dsc.gg/piratestation" target="_blank">meet PirateStation</a>
+            <h3>3DS Emulator Compatibility List</h3>
+            <p>A multi-platform open source compatibility list for Nintendo 3DS emulators! </p>
+            <a class="project-link" href="https://github.com/ashleytarifa/3dsemu-compatibility-list" target="_blank">see the list</a>
           </div>
         </div>
       </div>
