--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="tags">
             current status:
-            <p>playing on the new gaming PC</p>
+            <p>coding another web projects</p>
         </div>
         <div style="height: 30px; opacity: 0;">.</div>
     </div>
