--- a/about-me/index.html
+++ b/about-me/index.html
@@ -35,7 +35,7 @@
           <li>from brazil</li>
           <li>18y old</li>
           <li>gender fluid</li>
-          <li>any pronouns</li>
+          <li>she/her pronouns</li>
           <li>likes breakcore, vocaloid, nintendo, frutiger aero and other nerd stuff</li>
           <li>silly :3</li>
         </ul>
@@ -54,8 +54,7 @@
       <h2>do i do something else besides drawing?</h2><br>
       <p>i know some web developing (HTML and CSS) so i code some little silly stuff here and there, but i intend to be
         a programmer or game dev one day!</p><br><br>
-      <p>i also collect old consoles, play some games, listen to a LOT of music, and im now building my own pc! im
-        almost finishing it tho :3</p>
+      <p>i also collect old consoles, play some games and listen to a LOT of music</p>
     </div>
 
     <div class="smedia-card">
