about me revamp

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -23,38 +23,56 @@
     </div>
   
 
+    <div class="tags">
+      <p>hi! i'm ashley — also known as ash64, Lunna or liquid_tax online<br> 
+      i'm a brazilian artist, pixel enjoyer, cat enthusiast and lover of weird old tech</p>
+      <br>
+      <p>this little site is my cozy place on the internet, where i share what i like, what i make, and what i care about (at my own pace)</p>
+    </div>
+
     <div class="main-idle">
       <div class="idle-card">
-        I'm Ashley, also known as Lunna, ash64 or liquid_tax, i'm a brazilian pixel artist and web developer who began
-        creating drawings out of a passion for indie games such as Celeste, Stardew Valley, Super Mombo Quest, and old
-        SNES games
+        <p>about me list</p>
+        <ul class="aboutme-list">
+          <li>🌍 location: somewhere in brazil  </li>
+          <li>🔢 age: 18y old</li>
+          <li>🌊 gender fluid</li>
+          <li>🌸 pronouns: any</li>
+        </ul>
       </div>
 
       <div class="idle-card">
+        <p>things i like:</p>
         <ul class="aboutme-list">
-          <li>from brazil</li>
-          <li>18y old</li>
-          <li>gender fluid</li>
-          <li>she/her pronouns</li>
-          <li>likes breakcore, vocaloid, nintendo, frutiger aero and other nerd stuff</li>
-          <li>silly :3</li>
+          <li>retro aesthetics (like frutiger aero)</li>
+          <li>collecting consoles and games</li>
+          <li>music, older nintendo games, cooking and other nerdy stuff</li>
+          <li>listening to breakcore while reorganizing folders</li>
+        </ul>
+      </div>
+
+            <div class="idle-card">
+        <p>other things about me:</p>
+        <ul class="aboutme-list">
+          <li>🐱 owns: 8 consoles</li>
+          <li>🖊️ drawing since: 2023-ish </li>
+          <li>♡ fav games: celeste, life is strange, deltarune</li>
+          <li>🌸 pronouns: any</li>
+          <li>🎶 music: breakcore, vocaloid & ambient</li>
+          <li>🍄 aesthetics: frutiger aero, retro tech, pixel kawaii</li>
         </ul>
       </div>
     </div>
 
-    <div class="tags">
-      <h2>how did i started drawing?</h2><br>
-      <p>i always wanted to be an artist, but i could never draw anything. after developing a passion for indie games
-        and pixel art, i decided to give it a try and drew something very simple. however, i saw potential and ended up
-        creating my first landscape. i liked it and have continued drawing ever since. even with the challenges of daily
-        life (school and work), i still make some time to do what i love S2</p>
-    </div>
 
     <div class="tags">
-      <h2>do i do something else besides drawing?</h2><br>
-      <p>i know some web developing (HTML and CSS) so i code some little silly stuff here and there, but i intend to be
-        a programmer or game dev one day!</p><br><br>
-      <p>i also collect old consoles, play some games and listen to a LOT of music</p>
+      <p>🌸 i'm not always active, and sometimes i lose motivation to code or create — but that's okay!<br>  
+         🌸 this site isn't here to be perfect, it's here to feel like home
+      </p>
+    </div>
+
+    <div class="main-idle">
+
     </div>
 
     <div class="smedia-card">
