--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="profile-card">
             <img class="profile-pic" src="images/me.png" alt="Ashley">
             <h1>hi, im Ashley ✧</h1>
-            <p>also known as Lunna or ash64</p>
+            <p>also known as Lunna or ash64. thank you for visiting <3</p>
         </div>
 
 
@@ -48,18 +48,12 @@
 
         <div class="tags">
             current status:
-            <p>coding another web projects</p>
+            <p>taking it slow, organizing life, and drawing again when it feels right (｡•́︿•̀｡)</p>
         </div>
         <div style="height: 30px; opacity: 0;">.</div>
     </div>
-
-    <audio id="bg-music" src="bgm/bgm.mp3" autoplay loop></audio>
-    <button id="music-toggle">Play BGM</button>
-
-
     <canvas id="starCanvas"></canvas>
     <script src="stars.js"></script>
-    <script src="bgm.js"></script>
 </body>
 
 </html>
