--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="tags">
             current status:
-            <p>taking it slow, organizing life, and drawing again when it feels right (｡•́︿•̀｡)</p>
+            <p>coding more web sites :3</p>
         </div>
         <div style="height: 30px; opacity: 0;">.</div>
     </div>
