added collections page and fixed some stuff

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -24,7 +24,7 @@
   
 
     <div class="tags">
-      <p>hi! i'm ashley — also known as ash64, Lunna or liquid_tax online<br> 
+      <p>hi! i'm ashley. also known as ash64, Lunna or liquid_tax online<br> 
       i'm a brazilian artist, pixel enjoyer, cat enthusiast and lover of weird old tech</p>
       <br>
       <p>this little site is my cozy place on the internet, where i share what i like, what i make, and what i care about (at my own pace)</p>
@@ -57,16 +57,15 @@
           <li>🐱 owns: 8 consoles</li>
           <li>🖊️ drawing since: 2023-ish </li>
           <li>♡ fav games: celeste, life is strange, deltarune</li>
-          <li>🌸 pronouns: any</li>
           <li>🎶 music: breakcore, vocaloid & ambient</li>
-          <li>🍄 aesthetics: frutiger aero, retro tech, pixel kawaii</li>
+          <li>🍄 old tech collector, new tech enthusiast</li>
         </ul>
       </div>
     </div>
 
 
     <div class="tags">
-      <p>🌸 i'm not always active, and sometimes i lose motivation to code or create — but that's okay!<br>  
+      <p>🌸 i'm not always active, and sometimes i lose motivation to code or create, but that's okay!<br>  
          🌸 this site isn't here to be perfect, it's here to feel like home
       </p>
     </div>
@@ -76,7 +75,7 @@
     </div>
 
     <div class="smedia-card">
-      <h2>my social media</h2>
+      <h2>my social medias</h2>
       <p>feel free to say hi!</p><br>
       <a href="https://github.com/ashleytarifa" target="_blank" class="botao-social">github</a>
       <a href="https://www.reddit.com/user/liquidtax/" target="_blank" class="botao-social">reddit</a>
