--- a/projects/index.html
+++ b/projects/index.html
@@ -31,7 +31,7 @@
         <div class="flip-inner">
           <!-- front -->
           <div class="flip-front">
-            <img src="../images/pj/pj_purrgy.png" alt="project thumbnail" class="project-thumbnail" />
+            <img src="../images/pj/purrgy.png" alt="project thumbnail" class="project-thumbnail" />
             <h3>purrgatory (pt-br translation)</h3>
           </div>
 
@@ -54,7 +54,7 @@
         <div class="flip-inner">
           <!-- frente -->
           <div class="flip-front">
-            <img src="../images/pj/pj_wiimart.png" alt="project thumbnail" class="project-thumbnail" />
+            <img src="../images/pj/wiimart.png" alt="project thumbnail" class="project-thumbnail" />
             <h3>WiiMart Website</h3>
           </div>
 
@@ -76,7 +76,7 @@
         <div class="flip-inner">
           <!-- frente -->
           <div class="flip-front">
-            <img src="../images/pj/pj_pinble.png" alt="project thumbnail" class="project-thumbnail" />
+            <img src="../images/pj/pinble.png" alt="project thumbnail" class="project-thumbnail" />
             <h3>Pinble (game art display)</h3>
           </div>
 
@@ -95,7 +95,7 @@
         <div class="flip-inner">
           <!-- frente -->
           <div class="flip-front">
-            <img src="../images/pj/pj_aliens.png" alt="project thumbnail" class="project-thumbnail" />
+            <img src="../images/pj/aliens.png" alt="project thumbnail" class="project-thumbnail" />
             <h3>Aliens, Please! (game assets)</h3>
           </div>
 
@@ -116,14 +116,32 @@
         <div class="flip-inner">
           <!-- frente -->
           <div class="flip-front">
-            <img src="../images/pj/pj_cellarchive.png" alt="project thumbnail" class="project-thumbnail" />
-            <h3>Cellbit Archive</h3>
+            <img src="../images/pj/piratestation.png" alt="project thumbnail" class="project-thumbnail" />
+            <h3>PirateStation</h3>
           </div>
 
           <!-- verso -->
           <div class="flip-back">
-            <h3>Cellbit Archive</h3>
-            <p>Cellbit Archive is a fan-made channel meant to preserve old videos from CellBits — especially those that were removed or made private over time<br><br>
+            <h3>PirateStation</h3>
+            <p>PirateStation is a public discord server with the focus of repacking console games, emulators, and guides to help you sail smoothly through the seas of retro and modern gaming<br>
+            here you’ll also find a place to chat, hang out, and get support from fellow pirates :3</p>
+            <a class="project-link" href="https://dsc.gg/piratestation" target="_blank">explore PirateStation</a>
+          </div>
+        </div>
+      </div>
+      <!--  -->
+      <div class="flip-card">
+        <div class="flip-inner">
+          <!-- frente -->
+          <div class="flip-front">
+            <img src="../images/pj/cellarchive.png" alt="project thumbnail" class="project-thumbnail" />
+            <h3>Cellbit Archive (Discontinued)</h3>
+          </div>
+
+          <!-- verso -->
+          <div class="flip-back">
+            <h3>Cellbit Archive (Discontinued)</h3>
+            <p>Cellbit Archive is a fan-made channel meant to preserve old videos from CellBits. especially those that were removed or made private over time<br><br>
               The goal is to keep a little piece of history alive for those who miss it or are curious about it. It's just a small memory corner from someone who grew up watching and wanted to keep a bit of that close</p>
             <a class="project-link" href="https://www.youtube.com/@cellbitsarchive" target="_blank">watch Cellbit Archive</a>
           </div>
