--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         <div class="profile-card">
             <img class="profile-pic" src="images/me.png" alt="Ashley">
-            <h1>hi, im Ashley ✧</h1>
-            <p>also known as Lunna or ash64. thank you for visiting <3</p>
+            <h1>hi! im ashley ☆</h1>
+            <p>sometimes i draw pixel art and code some stuff</p>
         </div>
 
 
@@ -44,11 +44,14 @@
             <a href="art/" class="card-styles">
                 <div class="card">art corkboard</div>
             </a>
+            <a href="collection/" class="card-styles">
+                <div class="card">collections</div>
+            </a>
         </div>
 
         <div class="tags">
             current status:
-            <p>coding more web sites :3</p>
+            <p>idling</p>
         </div>
         <div style="height: 30px; opacity: 0;">.</div>
     </div>
